--- a/src/test/resources/META-INF/com/whiteandreetto/prototypes/simplebus/simplebus.properties
+++ b/src/test/resources/META-INF/com/whiteandreetto/prototypes/simplebus/simplebus.properties
@@ -1,7 +1,8 @@
 mongo.db.host=localhost
 mongo.db.port=27017
 mongo.db=simple-bus-mongo
-mongo.db.message.collection=messageQueue
+mongo.db.message.collection=CIRCULAR_BUFFER
 mongo.db.message.processed=PARKING_LOT
 mongo.db.message.collection.max=10
 mongo.db.message.collection.size=1000000000
+mongo.db.clean.at.startup=true
