some minor tweaks

--- a/src/test/resources/META-INF/com/whiteandreetto/prototypes/simplebus/simplebus.properties
+++ b/src/test/resources/META-INF/com/whiteandreetto/prototypes/simplebus/simplebus.properties
@@ -5,4 +5,4 @@ mongo.db.message.collection=CIRCULAR_BUFFER
 mongo.db.message.processed=PARKING_LOT
 mongo.db.message.collection.max=10
 mongo.db.message.collection.size=1000000000
-mongo.db.clean.at.startup=true
+mongo.db.clean.at.startup=false
