Core Documentation Updated

--- a/src/test/resources/META-INF/com/whiteandreetto/prototypes/simplebus/simplebus.properties
+++ b/src/test/resources/META-INF/com/whiteandreetto/prototypes/simplebus/simplebus.properties
@@ -1,8 +1,12 @@
+## MONGO DB
 mongo.db.host=localhost
 mongo.db.port=27017
 mongo.db=simple-bus-mongo
+## THE CAPPED COLLECTION
 mongo.db.message.collection=CIRCULAR_BUFFER
-mongo.db.message.processed=PARKING_LOT
 mongo.db.message.collection.max=10
+## THE DESTINATION QUEUE
+mongo.db.message.processed=PARKING_LOT
 mongo.db.message.collection.size=1000000000
+## FLAG TO CLEAN UP THE DB AT STARTUP
 mongo.db.clean.at.startup=false
